--- a/_hpc/2023-10-13-1d1v.md
+++ b/_hpc/2023-10-13-1d1v.md
@@ -1,6 +1,7 @@
 ---
 layout: post
-title: Test
+title: High-Performance 1D1V Kinetic Plasma Simulation
+collection: hpc
 ---
 In physics, the mass-energy equivalence is stated 
 by the equation $E=mc^2$, discovered in 1905 by Albert Einstein. The quick brown fox jumps over the lazy dog.
