--- a/_hpc/2023-10-13-imhd.md
+++ b/_hpc/2023-10-13-imhd.md
@@ -3,4 +3,33 @@ layout: post
 title: High-Performance Ideal MHD Plasma Simulation
 collection: hpc
 ---
-In this article, I will describe how to implement a simulation of a fluid plasma based on the Ideal MHD model that can achieve performance commensurate with the Cray-1 $(1976)$, one of the most successful supercomputers ever sold, on data volumes as large as $31$ GB. 
+### Introduction
+In this article, I will describe how to implement a simulation of a fluid plasma based on the Ideal MHD model that can achieve performance on modern retail hardware which eclipses the Cray-1 (1976), one of the most successful supercomputers ever sold, on data volumes as large as $31$ GB, which was as much as I could fit in $64$ GB of RAM while keeping the basic number of elements to a power-of-two.
+
+Arguably, the performance of the algorithm is commensurate with the Cray-2 (1982), however, the code I am about to describe is a sequential code and the Cray-2 was a quadcore processor so there is not an exact mapping between the two. 
+
+To follow this tutorial in scientific computing, which strictly-speaking is an advanced discipline of computer science, you will need to have some background in mathematics, and some ability to program. There will $\textbf{not}$ be a demand to solve complicated integrals, or do pages of algebra, but being a scientific code that solves physical equations it does involve numerical analysis, which can be heavy on the brain. 
+
+The intention is to build everything from the ground floor up, and provide a step-by-step process to guide you through every part of the project. The first step is to talk about the choice of language.
+
+### C++ - A High-Performance Compromise
+The original version of the code was done in C++. Why C++? Let me explain briefly. If you were to take every programming language and measure which is the most $\textit{powerful}$, in the purely physical sense of which gives you the most bang for your buck \(the electricity running the computer\), the winner would be C. Every programmer worth their salt needs to have written C at some point, just like every individual who wants to call themselves an engineer needs to have studied calculus. 
+
+However, not every programmer worth their salt needs to keep writing C once they've been exposed to it. Put simply, C requires the programmer to do the heavy lifting--all of it. Sometimes this is the right approach, like if you're writing an operating system, but other times it is not. For example, in Python, if you wanted to write a program that generated a QR code that you could send to your friend which displayed a digital birthday card when they scanned it, the project would be only a handful of lines. These lines would consist of `import` statements that loaded libraries which have modules to generate the QR code, attach the data you've specified as representing the birthday card to it, and then send it to your friend, as well as the statements instantiating this functionality.
+
+If, for some unknown reason, you wanted to implement this project in C, then the resulting code would be quite different. You would need to handle all of the details yourself. There would be no importing the libraries that implement the functionality you need. You would have to write them yourself, or scour the web in the hopes that someone has already completed the task, and you only need to provide the birthday card. The takeaway here is: before you do something, see if someone else has done it first.
+
+This takeaway is relevant, because it describes why--nominally--one should choose C++ for this project. Put simply, C++ is a compromise between the power of C, and the convenience of a high-level language like Python. At the cost of some abstractions which mask them (and reduce our performance slightly), we get access to the powerful, low-level C code without having to deal with or write it directly. Of course, you can choose to write the software in whatever language you'd like, but whatever choice you make, I recommend writing it in C++ as well. If for no other reason than to compare the performance. 
+
+Not to belabor the point, but I want to illustrate it concretely, and change the subject back to scientific computing in the process, by comparing what it would take to implement a Matrix data structure in C, vs. what it would take in C++. Finally, I'd also like to make a brief statement about the compiler, and what's going on under the hood when you run a program.
+
+<!-- Illustrate this point by comparing the code required to implement and work with a matrix (rank-2 tensor) in C vs. C++. -->
+
+### CPU Architecture - A Brief Overview
+<!-- The source code for this project [has a permanent home on Github][1]. However, currently, this repository is mostly empty as I am in the process of moving the code over from the [original repository where the codebase is located][2], and also fixing a bug in the boundary conditions. This kind of error is surely a barrier to being able to perform computational science with the code, but this software is only a school project, and more to the point it does not effect the speed of the compute kernel, for reasons that will be explained when we get there. Let's begin. -->
+
+### Ideal MHD
+
+
+[1]: https://github.com/russellmatt66/imhd-HPC
+[2]: https://github.com/russellmatt66/uw_MSAA-classwork/tree/main/aa545-sp23/screwpinch
