Fixed some formatting, worked on DT fusion alphas post.

--- a/_compsci/2023-10-17-nqueens.md
+++ b/_compsci/2023-10-17-nqueens.md
@@ -3,7 +3,7 @@ layout: post
 title: N-Queens
 collection: compsci
 ---
-N-queens is the general algorithmic extension of a classic chess problem first posed in the 19th-century by 
+&nbsp;&nbsp;&nbsp;&nbsp;N-queens is the general algorithmic extension of a classic chess problem first posed in the 19th-century by 
 
-[1]
+[^1]:
 
