--- a/_phys/2023-10-17-examprob.md
+++ b/_phys/2023-10-17-examprob.md
@@ -3,7 +3,7 @@ layout: post
 title: Astronautics Exam Problem
 collection: phys
 ---
-Inspired by a problem in Zangwill[^1], I came up with an exam problem based on it. Here is the original problem:
+&nbsp;&nbsp;&nbsp;&nbsp;Inspired by a problem in Zangwill[^1], I came up with an exam problem based on it. Here is the original problem:
 
 2.1 \[\textbf{Measuring B}\] 
 
