--- a/_hpc/2023-10-13-imhd.md
+++ b/_hpc/2023-10-13-imhd.md
@@ -25,7 +25,90 @@ Not to belabor the point, but I want to illustrate it concretely, and change the
 
 ### Matrices: The Rank-2 Tensors Behind Everything
 <!-- Illustrate this point by comparing the code required to implement and work with a matrix (rank-2 tensor) in C vs. C++. -->
+Matrices, formally rank-2 tensors, are the basis for scientific and engineering calculations. Here is what an implementation of a general matrix looks like in C++:
+```
+#ifndef MATRIX_H
+#define MATRIX_H
 
+#include <cstddef>
+#include <vector>
+
+class Matrix{
+    public:
+        Matrix(size_t M, size_t N): num_rows_(M), num_cols_(N), storage_(M * N, 0.0) {}
+
+        // Row-Major order
+        double& operator()(size_t i, size_t j) { return storage_[num_cols_ * i + j]; }
+        const double& operator()(size_t i , size_t j) const { return storage_[num_cols_ * i + j]; }
+
+        const size_t num_rows() const { return num_rows_; }
+        const size_t num_cols() const { return num_cols_; }
+
+    private:
+        size_t num_rows_, num_cols_;
+        std::vector<double> storage_;
+};
+#endif
+```
+
+$\hspace{1cm}$ And here is what it looks like in C:
+
+```
+#include <stdio.h>
+#include <stdlib.h>
+
+typedef struct {
+    int num_rows;
+    int num_cols;
+    double **data; // 2D array of doubles
+} Matrix;
+
+// Column-Major order
+Matrix createMatrix(int num_rows, int num_cols) {
+    Matrix mat;
+    mat.num_rows = num_rows;
+    mat.num_cols = num_cols;
+
+    // Allocate a row of double *
+    mat.data = (double **)malloc(num_rows * sizeof(double *));
+    
+    for (int i = 0; i < num_rows; i++) { // allocate the columns
+        mat.data[i] = (double *)malloc(num_cols * sizeof(double));
+    }
+
+    return mat;
+}
+
+void freeMatrix(Matrix mat) {
+    for (int i = 0; i < mat.num_rows; i++) {
+        free(mat.data[i]);
+    }
+    free(mat.data);
+}
+
+void setElement(Matrix mat, int row, int col, double value) {
+    if (row >= 0 && row < mat.num_rows && col >= 0 && col < mat.num_cols ) {
+        mat.data[row][col] = value;
+    }
+}
+
+double getElement(Matrix mat, int row, int col) {
+    if (row >= 0 && row < mat.num_rows && col >= 0 && col < mat.num_cols ) {
+        return mat.data[row][col];
+    }
+}
+``` 
+$\hspace{1cm}$ The above blocks of code are essentially equivalent with regards to what they implement. An entire post could probably be written just breaking down, and analyzing the differences between the two languages, and their consequences for a project. For starters: observe how much more work we have to do with the C implementation, and not just to write it, but also just to <i> work with it </i>. For example, every time we want read or write to the data structure, we have to call the correct function that enables us to do so. Not only is this cumbersome, it makes the code less readable. When we think of a particular element in a matrix it's something along the lines of an expression like,
+
+$$
+A(i,j) = A_{ij}
+$$
+
+Instead of this intuitive representation of the data when reading or writing the C implementation, we will be faced with a slew of `setElement(A, i, j)` and `getElement(A, i, j)`. Not only is this unintuituve and overly-verbose, there's also more room for error. As they're written, these functions are not safe. What happens if we try to read or write data outside the bounds of the data structures expanse in memory? The answer is that we will get a segfault, i.e., the process will be trying to access memory that it's not allowed to. In a small, demo program where we are just playing around with the data structure this might not be a big deal, but in a large production code where potentially trillions of lines of arithmetic are being processed that represent complex mathematical structures and physics, it can be a real nightmare. 
+
+$\hspace{1cm}$ So, why is C like this? Fundamentally, it's because the language requires the programmer to do the heavy lifting, and manage the memory manually. This characteristic of C should not be understated, in fact it is fair to say that it is <i> the </i> defining characteristic of the language. That's why C is the language of choice for so much of the systems software that forms the basis for the modern, digital world. That's also why it can stay there while we use C++ to write scientific codes--except, of course, when something needs to run <i> really </i> fast, then it's worth the effort :\).  
+
+In contrast, 
 
 ### CPU Architecture: A Brief Overview
 <!-- The source code for this project [has a permanent home on Github][1]. However, currently, this repository is mostly empty as I am in the process of moving the code over from the [original repository where the codebase is located][2], and also fixing a bug in the boundary conditions. This kind of error is surely a barrier to being able to perform computational science with the code, but this software is only a school project, and more to the point it does not effect the speed of the compute kernel, for reasons that will be explained when we get there. Let's begin. -->
