--- a/_hpc/2023-10-13-1d1v.md
+++ b/_hpc/2023-10-13-1d1v.md
@@ -7,3 +7,6 @@ In physics, the mass-energy equivalence is stated
 by the equation $E=mc^2$, discovered in 1905 by Albert Einstein. The quick brown fox jumps over the lazy dog.
 
 \\[\int_0^\infty e^{-x^2} dx=\frac{\sqrt{\pi}}{2}\\]
+
+### Solving Poisson's Equation in 1D with Periodic Boundary Conditions
+As sketched briefly 
