working on tonnage post

--- a/_phys/2023-10-17-examprob.md
+++ b/_phys/2023-10-17-examprob.md
@@ -24,6 +24,6 @@ Here is the problem I developed:
 
 > (10 pts) (d) Give some numbers, and ask them to calculate the steady magnetic field. Does it make sense? (is the divergence 0?)
 
-There's a couple of places that I think the problem still needs work. One, obviously (d) needs numbers. Two, there's no guarantee that the magnetic field in space will be steady. More likely, it will be quasi-steady, with the amplitude of these fluctuations varying dependent on the state of the sun. Based on that reason, I think this question would serve as a good second question for an exam where the first question is about calculating the conditions of the plasma at the specific location in question.  
+There's a couple of places that I think the problem still needs work. One, obviously (d) needs numbers. Two, there's no guarantee that the magnetic field in space will be steady. More likely, it will be quasi-steady, with the amplitude of these fluctuations varying dependent on the state of the sun, or more generally, whichever star is driving the local dynamics. Based on this reason, I think this question would serve as a good second question for an exam where the first question is about calculating the conditions of the plasma at the specific location.  
 
 [^1]: Zangwill, Andrew. “The Maxwell Equations.” Modern Electrodynamics, Cambridge University Press, Cambridge, UK, 2012. 
