Working on physics of weightlifting

--- a/_phys/2024-1-28-tonnage.md
+++ b/_phys/2024-1-28-tonnage.md
@@ -9,7 +9,7 @@ Why am I starting a post about "Tonnage" (whatever that is) by talking about "Pr
 
 Why? Because, strength is an adaptation. Progressive overload describes the process of doing more the next workout, than you did the previous one. Without this, there will be no reason for your body to grow stronger, because there will be no stimulus that requires it. So, what does tonnage have to do with this?
 
-Tonnage, in essence, is a measure of how much work you did to perform a given exercise. As we will see, comparing the tonnages between exercise A, and exercise B, is like comparing apples to oranges. It just doesn't make sense. Let's take a step back, and ask ourselves, what IS the work that one does during a given exercise?
+Tonnage, in essence, is a measure of how much work you did to perform a given exercise. As we will see, it is a rough metric, but a useful one, albeit with limitations. For example, comparing the tonnages between exercise A, and exercise B, is like comparing apples to oranges. It just doesn't make sense, and this limits one's ability to use tonnage as a way of characterizing the workload of a training session. Before getting into these weeds, we need to take a step back, and ask ourselves, what IS the work that one does during a given exercise?
 
 ### Mechanical Work
 Drilled into every physics student's brain is the formula $W = \vec{F}\cdot\vec{x}$. This is the amount of energy associated with a force, $\vec{F}$, moving a particle through a displacement, $\vec{x}$. 
@@ -19,6 +19,24 @@ The idea of a "particle" is an abstract one. If you asked a physicist what a par
 textit{Jesus christ}, you might be thinking. \textit{What is this guy even talking about?} I'm talking about barbells, of course. 
 
 ### Barbells
-You can think of a barbell as a quasiparticle. When you apply a force on the load that describes the barbell, it moves. What is this, but a collective behavior of the group of particles constituting the extended, mechanical body of the barbell? As you move the barbell, it acts like a single particle of mass $m$, located at the center of mass of the extended body, subject to the dynamics that the normal force that your own extended body is exerting on it. 
+You can think of a barbell as a quasiparticle. When you apply a force on the load that describes the barbell, it moves. What is this, but a collective behavior of the group of particles constituting the extended, mechanical body of the barbell? As you move the barbell, it acts like a single particle of mass $m$, located at the center of mass of the extended body, subject to the dynamics that the normal force your own extended body is exerting on it. 
 
 To be sure, there are second-order effects associated with this motion that we must not neglect out of hand. For example, if the barbell rotates during, say, a squat, this is undesirable behavior as it creates an imbalance that your body will respond to. When lifting, we do not want our body responding to imbalances, because they only create more imbalances, this time in the form of our anatomy, which will eventually propagate into our kinesiology if left unchecked.
+
+### Computing Tonnage - How Lifting Works
+Drilled into the brain of every physics student who ran the gauntlet of the introductory sequence in classical mechanics, thermodynamics, and E&M, and made it through to quantum mechanics, is that energy is fundamentally quantized. What this means is that it comes in discrete packets which we refer to as **quanta**. A quanta is simply a unit of something. Angular momentum is another fundamental physical concept that is also quantized, but we will not worry about that for the moment. 
+
+The purpose of this aside is to begin describing a process by which we can compute the work associated with a complicated motion. Here is where a physicist might curtly say that gravity is a conservative force, so if the purpose of this exercise to calculate how much energy it takes one to lift a loaded barbell, then it only matters where the barbell began, and where it ended. Their snobbish, premature, attitude would be misplaced here, because there is more going on here than just work being done on the barbell. 
+
+You see, we do not really care about the work being done on the barbell. Doing work on a loaded barbell is just a means to an end for us. What we really care about is how doing work on a barbell **stimulates adaptation** in our neuromusculoskeletal (NMS) system. When the NMS system is placed under load, it is stressed. Forget moving it for the moment, the mere act of holding the load steady demands that the NMS stabilize it, and this requires the activation of a set of muscles for this purpose. Muscles that work in this manner for a given lift are known variously as **passive**, or **static stabilizers**. An example would be the erector spinae during the bench press, or the arms during the squat. 
+
+As the load begins to move, depending on whether we are analyzing the eccentric, or concentric, phase of the lift, three more sets of muscles will kick in. First, there are the muscles that are responsible for driving the lift. These are termed, appropriately, the **primary agonists**. An example would be the pectoralis major, and anterior deltoid, for the bench press. These muscles begin to stretch, and store energy, during the eccentric phase when the loading on the muscular aspect on the NMS is occuring. Second, are the **antagonists**, which can be thought of as being secondary agonists. They are not the main drivers, like the agonists are, but rather helpful navigators, ensuring that the primary drivers are assisted in directing the load along its trajectory. An example would be the triceps brachii, during the bench press. Lastly, there are the **active**, or **dynamic stabilizers**. These muscles do not perform mechanical work themselves to move the load, but they do experience stress as a result of their role in holding it steady while it moves. An example would be the latissimus dorsi, during the bench press. The importance of these muscles cannot be understated. While the agonists, and antagonists, stretch during the eccentric phase of a lift, the stabilizers are responsible for ensuring that this action occurs in a controlled manner. 
+
+
+## Tension Curves - The Exact Mathematical Description of a Lift
+It is also important to understand that these categories are not immutable. More precisely, the role a given muscle group plays during a lift depends on the exact portion of the lift that is being studied. For example, during the (conventional) deadlift, the hamstrings play both the role of antagonist, towards the middle and end of the lift when the gluteus maximus realizes it cannot face down extending the hips alone, and dynamic stabilizer, towards the beginning of the lift when the role of the powering the weight off the ground is borne by the glutes, and quadriceps. 
+
+There are around 600 muscles in the human bod
+
+## References - ORGANIZE
+(1) https://exrx.net/Kinesiology/Deadlift
