Moving things around, added updated 'index.md'

--- a/incomplete/2024-1-28-tonnage.md
+++ b/incomplete/2024-1-28-tonnage.md
@@ -36,7 +36,8 @@ As the load begins to move, depending on whether we are analyzing the eccentric,
 ## Tension Curves - The Exact Mathematical Description of a Lift
 It is also important to understand that these categories are not immutable. More precisely, the role a given muscle group plays during a lift depends on the exact portion of the lift that is being studied. For example, during the (conventional) deadlift, the hamstrings play both the role of antagonist, towards the middle and end of the lift when the gluteus maximus realizes it cannot face down extending the hips alone, and dynamic stabilizer, towards the beginning of the lift when the role of the powering the weight off the ground is borne by the glutes, and quadriceps. 
 
-There are around 600 muscles in the human bod
+There are over 600 muscles in the human body. The exact number varies from person to person. Each muscle is made of 
 
 ## References - ORGANIZE
 (1) https://exrx.net/Kinesiology/Deadlift
+(2) https://www.healthline.com/health/how-many-muscles-are-in-the-human-body#diagrams-of-skeletal-muscles
