--- a/_gpu/2024-06-12_race.md
+++ b/_gpu/2024-06-12_race.md
@@ -3,7 +3,7 @@ layout: post
 title: Race Conditions
 collection: gpu
 ---
-Race conditions are one of the fundamental differences between writing sequential programs, and parallel ones. The canonical illustration of what they are is based on a parallel computation of pi by numerically integrating the expression,
+&nbsp;&nbsp;&nbsp;&nbsp;Race conditions are one of the fundamental differences between writing sequential programs, and parallel ones. The canonical illustration of what they are is based on a parallel computation of pi by numerically integrating the expression,
 
 $$
 \begin{equation}
@@ -11,4 +11,4 @@ $$
 \end{equation}
 $$
 
-the function $y = \sqrt{1 - x^{2}}$ over the domain $[-1, 1]$ describes the upper semi-circle of the unit circle, so integrating it accumulates an area of $\frac{\pi}{2}$.    
+The function $y = \sqrt{1 - x^{2}}$ over the domain $[-1, 1]$ describes the upper semi-circle of the unit circle, so integrating it accumulates an area of $\frac{\pi}{2}$.    
