Reversed post order, corrected wrong dates, started some new posts on MHD

--- a/incomplete/2024-04-22-pinch.md
+++ b/incomplete/2024-04-22-pinch.md
@@ -1,6 +1,7 @@
 ---
 layout: post
 title: A Primer on Plasma Pinches
+date: 2024-04-22
 collection: fusion
 ---
 CFD, or Computational Fluid Dynamics, as the joke goes, actually stands for "Colors For Directors". Jokes aside, what differentiates a pretty picture of a cylinder from a serious work of scientific computing that adds value to an engineering team, is an understanding of the physics being represented by the visualization, and their importance. This colorful cylinder represents the initial state of the axial current density for a kind of magnetic confinement fusion (MCF) configuration known as a "screw-pinch".
