--- a/_gpu/2024-07-12_race.md
+++ b/_gpu/2024-07-12_race.md
@@ -1,6 +1,7 @@
 ---
 layout: post
 title: Race Conditions
+date: 2024-07-12
 collection: gpu
 ---
 &nbsp;&nbsp;&nbsp;&nbsp;Race conditions are one of the fundamental differences between writing sequential programs, and parallel ones. The canonical illustration of what they are is based on a parallel computation of pi by numerically integrating the expression,
