--- a/_phys/2024-07-9_maxwell.md
+++ b/_phys/2024-07-9_maxwell.md
@@ -1,6 +1,7 @@
 ---
 layout: post
 title: Maxwell's Equations
+date: 2024-07-09
 collection: phys
 ---
 ### Maxwell's Equations in Vacuum 
@@ -14,4 +15,5 @@ $$
 \end{align}
 $$
 
+###
 <!-- ### A History of Electromagnetism -->
