--- a/_gpu/2024-07-12_race.md
+++ b/_gpu/2024-07-12_race.md
@@ -4,7 +4,7 @@ title: Race Conditions
 date: 2024-07-12
 collection: gpu
 ---
-&nbsp;&nbsp;&nbsp;&nbsp;Race conditions are one of the fundamental differences between writing sequential programs, and parallel ones. The canonical illustration of what they are is based on a parallel computation of pi by numerically integrating the expression,
+&nbsp;&nbsp;&nbsp;&nbsp;Race conditions are one of the fundamental differences between writing sequential programs, and parallel ones. Essentially, a race condition arises whenever there are asynchronously executing threads reading from, and writing to, shared memory. The canonical illustration of what they are is based on a parallel computation of pi by numerically integrating the expression,
 
 $$
 \begin{equation}
@@ -12,4 +12,4 @@ $$
 \end{equation}
 $$
 
-The function $y = \sqrt{1 - x^{2}}$ over the domain $[-1, 1]$ describes the upper semi-circle of the unit circle, so integrating it accumulates an area of $\frac{\pi}{2}$.    
+The function $y = \sqrt{1 - x^{2}}$ over the domain $[-1, 1]$ describes the upper semi-circle of the unit circle, so integrating it accumulates an area of $\frac{\pi}{2}$. There are many ways to [numerically evaluate an integral](../_math/2024-07-16_numericalintegration). One of the simplest is *trapezoidal integration*. Fundamentally, integration is the act of evaluating the area under a curve. Frequently, this fact gets obscured or becomes murky in student's minds as they progress in their education, learn various analytical techniques for evaluating integrals, and start to see them as objects which either have antiderivatives, or do not, and are to be done in Mathematica, regardless. 
