--- a/_phys/2024-07-15_mhd.md
+++ b/_phys/2024-07-15_mhd.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Introduction to Plasmas - Magnetohydrodynamics 
+title: Magnetohydrodynamics 
 date: 2024-07-15
 collection: phys
 ---
