More posts, more links

--- a/_phys/2024-07-9_maxwell.md
+++ b/_phys/2024-07-9_maxwell.md
@@ -15,5 +15,8 @@ $$
 \end{align}
 $$
 
-###
-<!-- ### A History of Electromagnetism -->
+#### cgs Units
+WIP
+
+#### A History of Electromagnetism
+WIP
