--- a/_phys/2024-07-15_mhd.md
+++ b/_phys/2024-07-15_mhd.md
@@ -4,8 +4,18 @@ title: Magnetohydrodynamics
 date: 2024-07-15
 collection: phys
 ---
-### The History of MHD
+#### The History of MHD
 &nbsp;&nbsp;&nbsp;&nbsp; Magnetohydrodynamics, MHD for short, is the study of electrically-conducting fluids. Strictly-speaking, the study dates back as far as to when people first began playing with liquid mercury, although it was Chandrasekhar's investigations into astrophysics in the early-20th century which really began the theoretical study of the discipline.   
 
-### Deriving MHD
-There are many flavors of MHD. From the simplest, and most useful, Ideal MHD model, to the 
+#### Deriving MHD
+There are many flavors of MHD. 
+
+#### Two-Fluid MHD
+
+#### Single-Fluid MHD
+
+#### Ideal MHD
+
+#### Resistive MHD
+
+#### Extended MHD
