Spinning up moar posts, added analytics

--- a/_phys/2024-07-15_mhd.md
+++ b/_phys/2024-07-15_mhd.md
@@ -4,7 +4,7 @@ title: Magnetohydrodynamics
 date: 2024-07-15
 collection: phys
 ---
-#### The History of MHD
+#### A Brief History of MHD
 &nbsp;&nbsp;&nbsp;&nbsp; Magnetohydrodynamics, MHD for short, is the study of electrically-conducting fluids. Strictly-speaking, the study dates back as far as to when people first began playing with liquid mercury, although it was Chandrasekhar's investigations into astrophysics in the early-20th century which really began the theoretical study of the discipline.   
 
 #### Deriving MHD
@@ -18,4 +18,9 @@ There are many flavors of MHD.
 
 #### Resistive MHD
 
+#### Hall MHD
+
 #### Extended MHD
+
+<!-- References -->
+<!-- [^1]:  -->
