--- a/_gpu/2024-07-18_lwsim.md
+++ b/_gpu/2024-07-18_lwsim.md
@@ -4,4 +4,8 @@ title: Direct Numerical Simulation of Plasma Kinetics on GPU
 date: 2024-07-18
 collection: gpu
 ---
-WIP
+#### Plasma Science and HPC - A Natural Couple
+&nbsp;&nbsp;&nbsp;&nbsp; Plasma science goes hand-in-hand with high-performance computing (HPC). Experimental plasma science is rife with data, and this data comes from the output of [limited diagnostics](../fusion/2024-07-18_plasmadiagnostics). Therefore, a tight coupling between theory and experiment is required to glean insight into the behavior of the plasma being studied, and this necessitates accompanying numerical simulations. There are many schemes for numerically simulating physical systems, but proceeding must be done with caution, and care, as they are merely discrete approximations to continuous systems. The multiscale nature of plasmas adds additional challenges on top of these inherent ones, forcing the plasma scientist to make decisions about what it is they want to focus on, and discarding the physics that they judge to be irrelevant.    
+
+#### The ABCs of HPC
+&nbsp;&nbsp;&nbsp;&nbsp; In professional science, "high-performance computing" is somewhat of a redundant thing to say. A scientist would be ill-advised to run their models using code that does not perform well, and in the modern era of open-source software, with the development of high-level, interpreted languages for scientific computing like Python, there is an abundance of options for a scientist who needs their simulations to run using performant code. Interpreted languages, like Python, are convenient, but this convenience comes at a price, namely, at the cost of performance. In contrast,    
