--- a/_phys/2024-07-15_mhd.md
+++ b/_phys/2024-07-15_mhd.md
@@ -8,7 +8,7 @@ collection: phys
 &nbsp;&nbsp;&nbsp;&nbsp; Magnetohydrodynamics, MHD for short, is the study of electrically-conducting fluids. Strictly-speaking, the study dates back as far as to when people first began playing with liquid mercury, although it was Chandrasekhar's investigations into astrophysics in the early-20th century which really began the theoretical study of the discipline.   
 
 #### Deriving MHD
-There are many flavors of MHD. 
+There are many flavors of MHD. At the lowest level, every one of them begins by taking moments of a kinetic equation with a suitable closure.  
 
 #### Two-Fluid MHD
 
