Working on Amhdahl's Law post

--- a/_hpc/2024-12-17_amdahl.md
+++ b/_hpc/2024-12-17_amdahl.md
@@ -4,6 +4,31 @@ title: Amdahl's Law
 date: 2024-12-17
 collection: hpc
 ---
+Every quantitative field has its fundamental laws. 
+
+Physicists will point to mass, momentum, and energy conservation. Modern physicists will smirk and point to Noether's theorem, instead. 
+Economists will point to supply and demand. Financial professionals will point to compound interest. 
+Mathematicians will point to Godel's incompleteness theorem. Computer scientists will point in the direction of Alan Turing. 
+
+In high-performance computing (HPC), the first thing that you learn is how hard it can be to parallelize something. Then, this motivates you to learn how to figure out whether or not you *should*[^1]. 
+
+Every algorithm can be thought of as being a set of sections that are parallelizable, together with a set of sections that are not parallelizable. Pregnancy is the classic example of a process that is not parallelizable. 
+Nine women can have nine babies in nine months, but, as the joke goes, regardless of what the project manager thinks, nine women cannot have one baby in one month. With a single core, the wall-time of 
+the algorithm can be expressed as, 
+
+\begin{align}
+T(1) = T_{ser} + T_{par}
+\end{align} 
+
+When multiple processors are introduced, which to be sure is not the *only* way to add parallelism, but it is the simplest to think about, then we cut the time of the parallel section accordingly. 
+Assuming the workload is evenly balanced, the processors are uniform, and we don't think too much about the specific details of the hardware so as to neglect for the moment the situations when *super-linear* speedups occur, 
+then we can assume that $p$ processors will reduce the wall-time of the parallel section by a factor of $p$,
+
+\begin{align}
+T(p) \geq T_{ser} + \frac{T_{par}}{p}
+\end{align}
+
+In practice, the workload will not be evenly balanced, bottlenecks will exist, etc., so we consider this expression to be a lower-bound on the wall-time of the algorithm.  
 <!-- References -->
 [^1:] Schmidt, B., et al. (2017). *Parallel Programming: Concepts and Practice* (1st ed.). Morgan Kaufmann.  
 [Amazon](https://www.amazon.com/Parallel-Programming-Bertil-Schmidt-Ph-D/dp/0128498900)
