Tidied up Amdahl's Law, onto Strong-scaling, and GBL

--- a/_gpu/2025-01-06_cudapap.md
+++ b/_gpu/2025-01-06_cudapap.md
@@ -4,6 +4,8 @@ title: CUDA - How to Plug and Play with your GPU
 date: 2025-01-06
 collection: gpu
 ---
+WIP - Copied from a LinkedIn draft, and still working on it :)
+
 Why do I love CUDA? One big reason is how it lets you just Plug and Play.
 
 
