--- a/_hpc/2024-12-17_amdahl.md
+++ b/_hpc/2024-12-17_amdahl.md
@@ -60,7 +60,9 @@ $$
 \end{align}
 $$
 
-&nbsp;&nbsp;&nbsp;&nbsp; Obviously, the first line is what we expect. When there is only a single core in our cluster, then we expect at best no change in performance. At worst, we might even see a slowdown due to the software overhead from introducing parallelism. The accuracy of this analysis is limited to algorithms which are [**strong-scaling**](./2025-01-06_strongscaling), meaning that even with a fixed problem size more processors will result in a speedup compared to less. As we will see in a moment, this is not always true. More does *not* always equal better, and for a very important reason when it comes to parallel programming. We can already see a hint of this from the second line of the above. Even in the case where we have an infinitude of processing cores, we are still limited by the structure of the algorithm, here represented by the coefficient $\alpha$, regarding what speedup we can obtain.   
+&nbsp;&nbsp;&nbsp;&nbsp; Obviously, the first line is what we expect. When there is only a single core in our cluster, then we expect at best no change in performance. At worst, we might even see a slowdown due to the software overhead from introducing parallelism. The accuracy of this analysis is limited to algorithms which are [**strong-scaling**](./2025-01-06_strongscaling), meaning that even with a fixed problem size more processors will result in a speedup compared to less. As we will see in a moment, this is not always true, and in practice we usually don't talk of this as a property of an algorithm, but more so as the regime for a test. 
+
+&nbsp;&nbsp;&nbsp;&nbsp; The fact remains that more does *not* always equal better, and for a very important reason when it comes to parallel programming. We can already see a hint of this from the second line of the above. Even in the case where we have an infinitude of processing cores, we are still limited by the structure of the algorithm, here represented by the coefficient $\alpha$, regarding what speedup we can obtain. To wrap this up, let's mention **weak-scaling**, and point to [how we analyze speedup when we vary both the problem size, AND the number of processors](./2025-01-06_gustafson). A more general law is required here, known as [**Gustafson's Law**](./2025-01-06_gustafson), and we will have to add additional parameters that expand upon the structure to describe how well the respective sections of the algorithm scale when the data volume is varied. 
 
 <!-- References -->
 [^1:] Schmidt, B., et al. (2017). *Parallel Programming: Concepts and Practice* (1st ed.). Morgan Kaufmann.  
