--- a/_hpc/2024-12-17_amdahl.md
+++ b/_hpc/2024-12-17_amdahl.md
@@ -4,6 +4,8 @@ title: Amdahl's Law
 date: 2024-12-17
 collection: hpc
 ---
+*5 min. read*
+
 &nbsp;&nbsp;&nbsp;&nbsp; Every quantitative field has its fundamental laws. Engineers will point to mass, momentum, and energy conservation. Modern physicists will smirk and point to Noether's theorem, instead. Economists will point to supply and demand. Financial professionals will point to compound interest. Mathematicians will point to Godel's Incompleteness Theorem. Computer scientists will gesture in the direction of Alan Turing. In high-performance computing (HPC), the first thing that you learn is how hard it can be to parallelize something. Then, this motivates you to learn how to figure out whether or not you *should*[^1]. 
 
 &nbsp;&nbsp;&nbsp;&nbsp; Every algorithm can be thought of as being a set of sections that are parallelizable, together with a set of sections that are not parallelizable. Pregnancy is the classic example of a process that is not parallelizable. Nine women can have nine babies in nine months, but as the joke goes, regardless of what the manager thinks, nine women cannot have one baby in one month. With a single core, the wall-time of the algorithm can be expressed as, 
