Adding Bennett Vorticity

--- a/_phys/2024-07-15_mhd.md
+++ b/_phys/2024-07-15_mhd.md
@@ -20,7 +20,21 @@ There are many flavors of MHD. At the lowest level, every one of them begins by 
 
 #### Hall MHD
 
-#### Extended MHD
+#### 5N-Moment Multi-Fluid
+This is the penultimate kind of MHD model. 5 variables are evolved that describe the flow of mass, momentum, and energy in each plasma species,
+
+$$
+\vec{Q} = \colvec{\rho \\ u \\ v \\ w \\ e}
+$$
+
+Obviously, some assumptions are simplifying things here. 
+
+#### 13N-Moment Multi-Fluid
+This is the most general kind of MHD model. 13 variables are evolved that describe the flow of mass, momentum, energy (based on an anisotropic pressure tensor), and heat flux in each plasma species,
+
+$$
+\vec{Q} = \colvec{\rho \\ u \\ v \\ w \\ p_{xx} \\ p_{xy} \\ p_{xz} \\ p_{yy} \\ p_{yz} \\ p_{zz} \\ q_{x} \\ q_{y} \\ q_{z}}
+$$
 
 <!-- References -->
 <!-- [^1]:  -->
